--- a/home.html
+++ b/home.html
@@ -46,13 +46,15 @@
             <img src="assets/homehero3.jpg" alt="Image 3">
           </figure>
         </div>
-        <h1 class="title">Your Title Here</h1> <!-- Add the title element here -->
-        <div class="line"></div>
-        </div>
       </div>
       
 
       <div class="hero">
+        
+        <div class="title">
+          <div class="line"></div>
+          <div class="title-container"></div>
+        </div>
       </div>
     </div>
 
