--- a/home.html
+++ b/home.html
@@ -50,14 +50,16 @@
       
 
       <div class="hero">
-        
         <div class="title">
           <div class="line"></div>
-          <div class="title-container"></div>
+          <div class="title-container">
+            <div class="hero-text">
+              <h1>Welcome to Jockey Conference Center</h1>
+              <p>Your perfect place for events, meetings, and conferences.</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
     <!-- <div class="footer">
       <div class="footer-container">
         <div class="logo-container">
