--- a/home.html
+++ b/home.html
@@ -46,13 +46,12 @@
             <img src="assets/homehero3.jpg" alt="Image 3">
           </figure>
         </div>
-        <h1 class="title">Your Title Here</h1> <!-- Add the title element here -->
-        <div class="line"></div>
-        </div>
       </div>
       
 
       <div class="hero">
+        <li class="hero-line"></li>
+        <li class="hero-container"></li>
       </div>
     </div>
 
