So far updated title

--- a/home.html
+++ b/home.html
@@ -50,8 +50,18 @@
       
 
       <div class="hero">
-        <li class="hero-line"></li>
-        <li class="hero-container"></li>
+        <!-- <div class="hero-line"></div> -->
+        <div class="hero-box">
+          <div class="hero-line"></div>
+          <div class="hero-container">
+            <div class="hero-title">
+              <p>Jockey</p>
+              <p>Conference</p>
+              <p>Center</p>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
 
