--- a/home.html
+++ b/home.html
@@ -50,20 +50,33 @@
       
 
       <div class="hero">
-        <!-- <div class="hero-line"></div> -->
         <div class="hero-box">
           <div class="hero-line"></div>
           <div class="hero-container">
             <div class="hero-title">
-              <p>Jockey</p>
-              <p>Conference</p>
-              <p>Center</p>
+              <p class="modified-jockey"><span class="hero-title-black">J</span>ockey</p>
+              <p><span class="hero-title-black">C</span>onference</p>
+              <p><span class="hero-title-black">C</span>enter</p>
             </div>
           </div>
+          <p class="motto">We make the <span class="highlight-motto">dream</span> happen.</p>
         </div>
-        
       </div>
-    </div>
+
+      <div class="desc">
+        <div class="desc-bg"></div>
+        <div class="desc-container">
+          <p>MAKE MEMORABLE EVENTS</p>
+        </div>
+      </div>
+
+      <!-- <div class="stats">
+        <div class="stats-bg">
+          <img src="assets/stats.jpg" alt="stats pic">          
+          <div class="darken"></div>
+        </div>
+      </div>
+    </div> -->
 
     <!-- <div class="footer">
       <div class="footer-container">
