--- a/home.html
+++ b/home.html
@@ -20,10 +20,10 @@
           </div>
           <div class="textn">
             <li class="highlight-nav">Home</li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Pricing</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </div>
         </div>
     </div>
@@ -64,10 +64,16 @@
       </div>
 
       <div class="desc">
-        <div class="desc-bg"></div>
-        <div class="desc-container">
-          <p>MAKE MEMORABLE EVENTS</p>
+        <div class="desc-bg">
+          <p class="desc-title">MAKE MEMORABLE EVENTS</p>
+          <p class="desc-subtitle">Anything, Anytime.</p>
+          <p class="desc-text">From meetings to concerts, be it exhibitions or conventions, we have our doors open for YOU! <br><br>Jockey Conference Center (JCC) facilitates your every need with our excellent guidance and assistance in terms of technical and operational support to make your dream events come true.</p>
+          <div class="plan-button">
+            <p>Plan Your Event</p>
+            <img class="arrow" src="assets/background-removed/arrowpink.png">
+          </div>
         </div>
+        
       </div>
 
       <!-- <div class="stats">
