Em I think this is wrong

--- a/home.html
+++ b/home.html
@@ -55,7 +55,16 @@
           <div class="title-container">
             <div class="hero-text">
               <h1>Welcome to Jockey Conference Center</h1>
-              <p>Your perfect place for events, meetings, and conferences.</p>
+              <p>Welcome to Jockey Conference Center.</p>
+              <button>
+                <span class="spark__container">
+                  <span class="spark"></span>  
+                </span>
+                <span class="backdrop"></span>
+                <span class="text">
+                  Defuk is this
+                </span>
+              </button>
             </div>
           </div>
         </div>
