--- a/home.html
+++ b/home.html
@@ -101,7 +101,19 @@
 
     <div class="schedule">
       <div class="schedule-bg">
-        <p style=" color: pink;">hallo</p>
+        <p class="schedule-title">WHAT'S UP THIS WEEK</p>
+        <p class="schedule-subtitle">Be a part of it.</p>
+        <div class="schedule-container">
+          <div class="astroboy">
+
+          </div>
+          <div class="jrt-worship">
+
+          </div>
+          <div class="kc-goldenage">
+            
+          </div>
+        </div>
       </div>
     </div>
 
