FIXING THE FLEEEXXXX BOX

--- a/home.html
+++ b/home.html
@@ -81,17 +81,17 @@
         <div class="stats-bg-darken"></div>
         <div class="icon-container">
           <div class="event">
-            <p class="num">1</p>
+            <p class="num">20</p>
             <img src="assets/background-removed/event icon.png">
             <p class="stat-desc" id="event-desc">Events</p>
           </div>
           <div class="visitor">
-            <p class="num">1</p>
+            <p class="num">69</p>
             <img src="assets/background-removed/peep icon.png">
             <p class="stat-desc" id="visitor-desc">Visitors</p>
           </div>
           <div class="sponsor">
-            <p class="num">1</p>
+            <p class="num">100</p>
             <img src="assets/background-removed/sponsor icon.png">
             <p class="stat-desc" id="sponsor-desc">Sponsors</p>
           </div>
@@ -105,17 +105,18 @@
         <p class="schedule-subtitle">Be a part of it.</p>
         <div class="schedule-container">
           <div class="astroboy">
-
+            <h1>Test</h1>
           </div>
           <div class="jrt-worship">
-
+            <h1>Test</h1>
           </div>
           <div class="kc-goldenage">
-            
+            <h1>Test</h1>
           </div>
         </div>
       </div>
     </div>
+    
 
     <!-- <div class="footer">
       <div class="footer-container">
