add the text :)

--- a/home.html
+++ b/home.html
@@ -105,13 +105,13 @@
         <p class="schedule-subtitle">Be a part of it.</p>
         <div class="schedule-container">
           <div class="astroboy">
-            <h1>Test</h1>
+            <div class="container-text">Astroboy Tour</div>
           </div>
           <div class="jrt-worship">
-            <h1>Test</h1>
+            <div class="container-text">JRT Worship</div>
           </div>
           <div class="kc-goldenage">
-            <h1>Test</h1>
+            <div class="container-text">KC Golden Age</div>
           </div>
         </div>
       </div>
