Schedule section done!
Adapted the Figma to match the code bcs I'm tired :cry: will update to make animation smoother (possibly)

--- a/home.html
+++ b/home.html
@@ -105,15 +105,39 @@
         <p class="schedule-subtitle">Be a part of it.</p>
         <div class="schedule-container">
           <div class="astroboy">
-
+            <p class="schedule-desc">Astroboy Tour</p>
+            <div class="limited-seat-container">
+              <p class="limited-seat">Limited <span>Seats</span></p>
+              <div class="book-now">
+                <p>Book Now</p>
+              </div>
+            </div>
           </div>
           <div class="jrt-worship">
-
+            <p class="schedule-desc">JRT Worship</p>
+            <div class="limited-seat-container">
+              <p class="limited-seat">Limited <span>Seats</span></p>
+              <div class="book-now">
+                <p>Book Now</p>
+              </div>
+            </div>
           </div>
           <div class="kc-goldenage">
-            
+            <p class="schedule-desc">KC Golden Age</p>
+            <div class="limited-seat-container">
+              <p class="limited-seat">Limited <span>Seats</span></p>
+              <div class="book-now">
+                <p>Book Now</p>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="footer-bg">
+        
       </div>
     </div>
 
