HOME PAGE DONE OYEEEEE
easter egg for bear

--- a/home.html
+++ b/home.html
@@ -137,23 +137,44 @@
 
     <div class="footer">
       <div class="footer-bg">
+        <div class="logo-white">
+          <a href="home.html"><img src="assets/background-removed/logowhite.png"></a>
+          <p>A place for your <span>every</span> need, <span>anytime</span>.</p>
+        </div>
+        <div class="level">
+          <div class="information">
+            <p class="footer-title">INFORMATION</p>
+            <p class="footer-desc">Terms and Conditions</p>
+            <p class="footer-desc">Privacy and Policy</p>
+            <p class="footer-desc">Cookie Management</p>
+          </div>
+          <div class="explore">
+            <p class="footer-title">EXPLORE MORE</p>
+            <a href="events.html"><p class="footer-desc">Events</p></a>
+            <a href="pricing.html"><p class="footer-desc">Pricing</p></a>
+            <a href="about.html"><p class="footer-desc">About</p></a>
+            <a href="contact.html"><p class="footer-desc">Contact</p></a>
+          </div>
+          <div class="follow">
+            <p class="footer-title">FOLLOW US</p>
+            <div class="facebook">
+              <img src="assets/background-removed/facebook.png">
+              <a href="https://www.youtube.com/@mzmznasipadang" target="_blank"><p class="footer-link">jockeycc</p></a>
+            </div>
+            <div class="youtube">
+              <img src="assets/background-removed/youtube.png">
+              <a href="https://youtu.be/gGs7Lqxf0io" target="_blank"><p class="footer-link">jockeyconcenter</p></a>
+            </div>
+            <div class="instagram">
+              <img src="assets/background-removed/instagram.png">
+              <a href="https://www.instagram.com/jslwavtn/" target="_blank"><p class="footer-link">jcc.bsd</p></a>
+            </div>
+          </div>
+        </div>
         
+        <p class="copyright">Copyright 2023 - All Rights Reserved - JCC</p>
       </div>
     </div>
 
-    <!-- <div class="footer">
-      <div class="footer-container">
-        <div class="logo-container">
-          <div class="logo">
-            <li>
-              <a href="home.html"
-                ><img src="assets/background-removed/logowhite.png"
-              /></a>
-            </li>
-            <li class="logo-desc">A place for your <span class="highlight-desc">every</span> need, <span>anytime</span>.</li>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </body>
 </html>
