Pushing to main

--- a/home.html
+++ b/home.html
@@ -163,7 +163,7 @@
             </div>
             <div class="youtube">
               <img src="assets/background-removed/youtube.png">
-              <a href="https://youtu.be/gGs7Lqxf0io" target="_blank"><p class="footer-link">jockeyconcenter</p></a>
+              <a href="https://www.youtube.com/watch?v=2xx_2XNxxfA" target="_blank"><p class="footer-link">jockeyconcenter</p></a>
             </div>
             <div class="instagram">
               <img src="assets/background-removed/instagram.png">
