Added animation counter in home page!
Home page is practically done (for now), buttons can be worked with <a> instead. Moving on to Events!

--- a/home.html
+++ b/home.html
@@ -81,17 +81,17 @@
         <div class="stats-bg-darken"></div>
         <div class="icon-container">
           <div class="event">
-            <p class="num">1</p>
+            <p class="num" id="num-event">1</p>
             <img src="assets/background-removed/event icon.png">
             <p class="stat-desc" id="event-desc">Events</p>
           </div>
           <div class="visitor">
-            <p class="num">1</p>
+            <p class="num" id="num-visitor">1</p>
             <img src="assets/background-removed/peep icon.png">
             <p class="stat-desc" id="visitor-desc">Visitors</p>
           </div>
           <div class="sponsor">
-            <p class="num">1</p>
+            <p class="num" id="num-sponsor">1</p>
             <img src="assets/background-removed/sponsor icon.png">
             <p class="stat-desc" id="sponsor-desc">Sponsors</p>
           </div>
@@ -175,6 +175,6 @@
         <p class="copyright">Copyright 2023 - All Rights Reserved - JCC</p>
       </div>
     </div>
-
   </body>
+  <script src="home.js" defer></script>
 </html>
