Major changes and file rename!

--- a/about.html
+++ b/about.html
@@ -20,12 +20,22 @@
           </div>
           <div class="textn">
             <li><a href="home.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="events1.html">Events</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li class="highlight-nav">About</li>
             <li><a href="contact.html">Contact</a></li>
           </div>
         </div>
+    </div>
+
+    <div class="hero">
+      <div class="hero-bg">
+        <img class="hero-bg-img" src="assets/abouthero.jpg" alt="about hero">
+        <p class="hero-title">About</p>
+        <div class="hero-line">
+          <div class="hero-line-diamond"></div>
+        </div>
+      </div>
     </div>
 
 
@@ -45,7 +55,7 @@
             </div>
             <div class="explore">
               <p class="footer-title">EXPLORE MORE</p>
-              <a href="events.html"><p class="footer-desc">Events</p>
+              <a href="events1.html"><p class="footer-desc">Events</p>
               <a href="pricing.html"><p class="footer-desc">Pricing</p></a>
               <p class="footer-desc"><span>About</span></p>
               <a href="contact.html"><p class="footer-desc">Contact</p></a>
