--- a/events1.html
+++ b/events1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events | Jockey Conference Center</title>
     <link rel="icon" href="assets/background-removed/logoblack.png" />
-    <link rel="stylesheet" href="events.css" />
+    <link rel="stylesheet" href="events1.css" />
 </head>
 <body>
     <div class="header">
@@ -26,6 +26,16 @@
             <li><a href="contact.html">Contact</a></li>
           </div>
         </div>
+    </div>
+
+    <div class="hero">
+      <div class="hero-bg">
+        <img class="hero-bg-img" src="assets/eventhero.jpg" alt="event hero">
+        <p class="hero-title">Events</p>
+        <div class="hero-line">
+          <div class="hero-line-diamond"></div>
+        </div>
+      </div>
     </div>
 
 
