--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
           </div>
           <div class="textn">
             <li class="highlight-nav">Home</li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="events1.html">Events</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -150,7 +150,7 @@
           </div>
           <div class="explore">
             <p class="footer-title">EXPLORE MORE</p>
-            <a href="events.html"><p class="footer-desc">Events</p></a>
+            <a href="events1.html"><p class="footer-desc">Events</p></a>
             <a href="pricing.html"><p class="footer-desc">Pricing</p></a>
             <a href="about.html"><p class="footer-desc">About</p></a>
             <a href="contact.html"><p class="footer-desc">Contact</p></a>
