--- a/pricing.html
+++ b/pricing.html
@@ -20,12 +20,22 @@
           </div>
           <div class="textn">
             <li><a href="home.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="events1.html">Events</a></li>
             <li class="highlight-nav">Pricing</li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </div>
         </div>
+    </div>
+
+    <div class="hero">
+      <div class="hero-bg">
+        <img class="hero-bg-img" src="assets/pricinghero.jpg" alt="price hero">
+        <p class="hero-title">Pricing</p>
+        <div class="hero-line">
+          <div class="hero-line-diamond"></div>
+        </div>
+      </div>
     </div>
 
 
@@ -45,7 +55,7 @@
             </div>
             <div class="explore">
               <p class="footer-title">EXPLORE MORE</p>
-              <a href="events.html"><p class="footer-desc">Events</p></a>
+              <a href="events1.html"><p class="footer-desc">Events</p></a>
               <p class="footer-desc"><span>Pricing</span></p>
               <a href="about.html"><p class="footer-desc">About</p></a>
               <a href="contact.html"><p class="footer-desc">Contact</p></a>
