First week of Events roughly done!
Follwing next weeks and need to connect all of them via JS later. Need to edit onclick CSS of Email input. Added new files.

--- a/events1.html
+++ b/events1.html
@@ -28,12 +28,79 @@
         </div>
     </div>
 
-    <div class="hero">
+    <div class="content">
       <div class="hero-bg">
         <img class="hero-bg-img" src="assets/eventhero.jpg" alt="event hero">
         <p class="hero-title">Events</p>
         <div class="hero-line">
           <div class="hero-line-diamond"></div>
+        </div>
+      </div>
+
+      <div class="week-container">
+        <div class="week" id="week1">
+          <p>WEEK 1</p>
+        </div>
+        <div class="week" id="week2">
+          <p>WEEK 2</p>
+        </div>
+        <div class="week" id="week3">
+          <p>WEEK 3</p>
+        </div>
+        <div class="week" id="week4">
+          <p>WEEK 4</p>
+        </div>
+      </div>
+
+      <div class="event-container">
+        <div class="event-box" id="event1">
+          <img src="assets/astroboy.jpg">
+          <div class="event-text">
+            <p class="event-date">May 6th</p>
+            <p class="event-time">17.00 - 02.00</p>
+            <p class="event-name">Astroboy Tour</p>
+            <p class="event-desc">Celebrating their 5th anniversary, the legendary Astroboy band is now greeting their fans from all around the world.</p>
+          </div>
+        </div>
+        <div class="event-box" id="event2">
+          <img src="assets/jrtworship.jpg">
+          <div class="event-text">
+            <p class="event-date">May 7th</p>
+            <p class="event-time">15.00 - 20.00</p>
+            <p class="event-name">JRT Worship</p>
+            <p class="event-desc">Gather forth and worship God in an energetic and religious believers, altogether for our Savior.</p>
+          </div>
+        </div>
+        <div class="event-box" id="event3">
+          <img src="assets/kcgoldenage.jpg">
+          <div class="event-text">
+            <p class="event-date">May 9th</p>
+            <p class="event-time">17.00 - 02.00</p>
+            <p class="event-name">KC Golden Age</p>
+            <p class="event-desc">Metal group we all know and love, KC Golden Age, is now here with a fresh list of songs from their newest album, Snakezz.</p>
+          </div>
+        </div>
+        <div class="event-box" id="event4">
+          <img src="assets/westlife.jpg">
+          <div class="event-text">
+            <p class="event-date">May 10th</p>
+            <p class="event-time">12.00 - 22.00</p>
+            <p class="event-name">Westlife: TWDT</p>
+            <p class="event-desc">Returning with The Wild Dreams Tour, Westlife is back to jam your favorite tunes. Old but gold, they say!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="newsletter">
+        <div class="newsletter-bg">
+          <div class="newsletter-text">
+            <p class="newsletter-title">Keep yourself updated!</p>
+            <p class="newsletter-subtitle">Subscribe to our <span>newsletter</span>.</p>
+          </div>
+          <input type="text" placeholder="Email Address"/>
+          <div class="send-button">
+            <p>Send</p>
+          </div>
         </div>
       </div>
     </div>
