Events page close to done!
Lack a few edits on input in newsletter, otherwise, all pages are connected and validation is running smoothly in JS!

--- a/events1.html
+++ b/events1.html
@@ -97,15 +97,13 @@
             <p class="newsletter-title">Keep yourself updated!</p>
             <p class="newsletter-subtitle">Subscribe to our <span>newsletter</span>.</p>
           </div>
-          <input type="text" placeholder="Email Address"/>
+          <input type="text" placeholder="Email Address" id="email"/>
           <div class="send-button">
-            <p>Send</p>
+            <button type="submit" id="button">Send</button>
           </div>
         </div>
       </div>
     </div>
-
-
 
     <div class="footer">
         <div class="footer-bg">
@@ -148,4 +146,5 @@
         </div>
       </div>
 </body>
+<script src="events.js" defer></script>
 </html>
