Events done, Pricing done!
Done adding highlight upon clicking newsletter input, pricing page all done! Still a bonus to figure out "Book Now" as a button and knowing where it should  lead. :sweat:

--- a/about.html
+++ b/about.html
@@ -38,6 +38,13 @@
       </div>
     </div>
 
+    <div class="description"> <!-- buat kasi background F0F0F0 -->
+      <div class="description-container">
+        <img src="">
+        <p></p>
+      </div>
+    </div>
+
 
 
     <div class="footer">
