--- a/pricing.html
+++ b/pricing.html
@@ -38,6 +38,84 @@
       </div>
     </div>
 
+    <div class="price-container">
+      <div class="price">
+        <div class="price-tag">
+          <p>STANDARD</p>
+        </div>
+        <p class="price-num">Rp 20 mio</p>
+        <div class="benefit-container">
+          <div class="benefit-text">
+            <p>12-hour Access</p>
+            <p>Technical Support</p>
+            <p>Sound System</p>
+            <p>Cleaning Assistant</p>
+            <p>Welcoming Drink</p>
+            <p>1 Banner / Poster</p>
+          </div>
+          <div class="benefit-check">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+          </div>
+        </div>
+        <div class="book-now">Book Now</div>
+      </div>
+      <div class="price">
+        <div class="price-tag">
+          <p>PREMIUM</p>
+        </div>
+        <p class="price-num">Rp 39 mio</p>
+        <div class="benefit-container">
+          <div class="benefit-text">
+            <p>BASIC Perks</p>
+            <p>24-hour Access</p>
+            <p>Welcoming Snacks</p>
+            <p>1-day Digital Ad</p>
+            <p>Guiding Staff</p>
+            <p>3 Banner / Poster</p>
+          </div>
+          <div class="benefit-check">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+          </div>
+        </div>
+        <div class="book-now">Book Now</div>
+      </div>
+      <div class="price">
+        <div class="price-tag">
+          <p>EXCLUSIVE</p>
+        </div>
+        <p class="price-num">Rp 75 mio</p>
+        <div class="benefit-container">
+          <div class="benefit-text">
+            <p>PREMIUM Perks</p>
+            <p>48-hour Access</p>
+            <p>2x Lunch / Dinner</p>
+            <p>2-day Digital Ad</p>
+            <p>Private Guard</p>
+            <p>5 Banner / Poster</p>
+          </div>
+          <div class="benefit-check">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+            <img src="assets/background-removed/checklist icon.png">
+          </div>
+        </div>
+        <div class="book-now">Book Now</div>
+      </div>
+    </div>
+
 
 
     <div class="footer">
