About page done!
Like literally, done.

--- a/about.html
+++ b/about.html
@@ -40,8 +40,42 @@
 
     <div class="description"> <!-- buat kasi background F0F0F0 -->
       <div class="description-container">
-        <img src="">
-        <p></p>
+        <img src="assets/aboutdesc.jpg">
+        <p>Jockey Conference Center (JCC) facilitates your every need with our excellent guidance and assistance in terms of technical and operational support to make your dream events come true. <br><br>Located in the heart of Jakarta, Jockey Conference Center (JCC) first opened its doors in 1974. Being one of the earliest convention centers, JCC had the chance to witness many historical events. <br><br>In its journey, Jockey Conference Center (JCC) has held various distinguished national and international events, including the 11th Non-Aligned Movement and Asian-African Conference.</p>
+      </div>
+    </div>
+
+    <div class="award">
+      <img class="award-bg" src="assets/awardcontainer.jpg">
+      <div class="award-darken"></div>
+      <div class="award-container">
+        <p class="award-title">FIRST<br>CLASS<br>VENUE</p>
+        <div class="award-text">
+          <p>Best Exhibition Hall</p>
+          <p>Purpose Built Category</p>
+          <p>Commendable Event</p>
+          <p>Visual Imagery Award</p>
+          <p>Best Convention Center</p>
+        </div>
+        <div class="award-img">
+          <img src="assets/background-removed/staricon.png">
+          <img src="assets/background-removed/staricon.png">
+          <img src="assets/background-removed/staricon.png">
+          <img src="assets/background-removed/staricon.png">
+          <img src="assets/background-removed/staricon.png">
+        </div>
+      </div>
+    </div>
+
+    <div class="member">
+      <div class="member-container">
+        <p>Proud Member Of</p>
+        <div class="member-badge">
+          <img src="assets/background-removed/asperapi.png" id="badge1">
+          <img src="assets/background-removed/aipc.png" id="badge2">
+          <img src="assets/background-removed/icca.png" id="badge3">
+          <img src="assets/background-removed/ufi.png" id="badge4">
+        </div>
       </div>
     </div>
 
