Fricking done! (non-responsive ofc)
hehe, cry in pein

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,60 @@
       </div>
     </div>
 
+    <div class="form">
+      <div class="contact-us">
+        <p class="form-title"><span>CONTACT US</span></p>
+        <div class="contact-info">
+          <div class="circle">
+            <img class="location" src="assets/background-removed/locationicon.png">
+          </div>
+          <p><span>Address:</span> Jalan Cempaka Putih 23 No. 17, Jakarta Barat, Indonesia</p>
+        </div>
+        <div class="contact-info">
+          <div class="circle">
+            <img class="phone-email" src="assets/background-removed/phoneicon.png">
+          </div>
+          <p><span>Phone:</span> +62 021-1234-5678</p>
+        </div>
+        <div class="contact-info">
+          <div class="circle">
+            <img class="phone-email" src="assets/background-removed/mailicon.png">
+          </div>
+          <p><span>Email:</span> jockeycc@mail.com</p>
+        </div>
+      </div>
+      <div class="reach-out">
+        <p class="form-title">REACH OUT TO US</p>
+        <div class="name-email">
+          <input type="text" placeholder="Name" id="name"/>
+          <input type="email" inputmode="email" placeholder="Email" id="email"/>
+        </div>
+        <div class="phone-number">
+          <input type="text" inputmode="numeric" placeholder="Phone Number" id="phone"/>
+        </div>
+        <div class="message">
+          <textarea rows="20" cols="20"  placeholder="Message" id="message"></textarea>
+        </div>
+        <div class="preference">
+          <p>I prefer to be contacted through:</p>
+          <input type="radio" value="Email" id="email-choice" name="choice" checked>
+          <label for="email-choice">Email</label>
+          <input type="radio" value="Phone" id="phone-choice" name="choice">
+          <label for="phone-choice">Phone</label>
+        </div>
+        <div class="send-button">
+          <button type="submit" id="button">Send</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="map-container">
+      <p>Come and Visit Us!</p>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.3740344923567!2d106.80463057402507!3d-6.214303560866053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f6adbd77af01%3A0x23abed373d7987d2!2sBalai%20Sidang%20Jakarta%20Convention%20Center!5e0!3m2!1sen!2sid!4v1685007921509!5m2!1sen!2sid"></iframe>
+      </div>
+    </div>
+
 
 
     <div class="footer">
@@ -81,4 +135,5 @@
         </div>
       </div>
 </body>
+<script src="contact.js" defer></script>
 </html>
