--- a/events1.html
+++ b/events1.html
@@ -97,7 +97,7 @@
             <p class="newsletter-title">Keep yourself updated!</p>
             <p class="newsletter-subtitle">Subscribe to our <span>newsletter</span>.</p>
           </div>
-          <input type="text" placeholder="Email Address" id="email"/>
+          <input type="email" inputmode="email" placeholder="Email Address" id="email">
           <div class="send-button">
             <button type="submit" id="button">Send</button>
           </div>
