--- a/pricing.html
+++ b/pricing.html
@@ -62,7 +62,7 @@
             <img src="assets/background-removed/checklist icon.png">
           </div>
         </div>
-        <div class="book-now">Book Now</div>
+        <a href="https://forms.gle/5YxxqPpL48i1qWYp9" target="_blank"><div class="book-now">Book Now</div></a>
       </div>
       <div class="price">
         <div class="price-tag">
@@ -87,7 +87,7 @@
             <img src="assets/background-removed/checklist icon.png">
           </div>
         </div>
-        <div class="book-now">Book Now</div>
+        <a href="https://forms.gle/5YxxqPpL48i1qWYp9" target="_blank"><div class="book-now">Book Now</div></a>
       </div>
       <div class="price">
         <div class="price-tag">
@@ -112,7 +112,7 @@
             <img src="assets/background-removed/checklist icon.png">
           </div>
         </div>
-        <div class="book-now">Book Now</div>
+        <a href="https://forms.gle/5YxxqPpL48i1qWYp9" target="_blank"><div class="book-now">Book Now</div></a>
       </div>
     </div>
 
