--- a/contact.html
+++ b/contact.html
@@ -62,26 +62,28 @@
       </div>
       <div class="reach-out">
         <p class="form-title">REACH OUT TO US</p>
-        <div class="name-email">
-          <input type="text" placeholder="Name" id="name"/>
-          <input type="email" inputmode="email" placeholder="Email" id="email"/>
-        </div>
-        <div class="phone-number">
-          <input type="text" inputmode="numeric" placeholder="Phone Number" id="phone"/>
-        </div>
-        <div class="message">
-          <textarea rows="20" cols="20"  placeholder="Message" id="message"></textarea>
-        </div>
-        <div class="preference">
-          <p>I prefer to be contacted through:</p>
-          <input type="radio" value="Email" id="email-choice" name="choice" checked>
-          <label for="email-choice">Email</label>
-          <input type="radio" value="Phone" id="phone-choice" name="choice">
-          <label for="phone-choice">Phone</label>
-        </div>
-        <div class="send-button">
-          <button type="submit" id="button">Send</button>
-        </div>
+        <form>
+          <div class="name-email">
+            <input type="text" placeholder="Name" id="name"/>
+            <input type="email" inputmode="email" placeholder="Email" id="email"/>
+          </div>
+          <div class="phone-number">
+            <input type="text" inputmode="numeric" placeholder="Phone Number" id="phone"/>
+          </div>
+          <div class="message">
+            <textarea rows="20" cols="20"  placeholder="Message" id="message"></textarea>
+          </div>
+          <div class="preference">
+            <p>I prefer to be contacted through:</p>
+            <input type="radio" value="Email" id="email-choice" name="choice" checked>
+            <label for="email-choice">Email</label>
+            <input type="radio" value="Phone" id="phone-choice" name="choice">
+            <label for="phone-choice">Phone</label>
+          </div>
+          <div class="send-button">
+            <button type="submit" id="button">Send</button>
+          </div>
+        </form>
       </div>
     </div>
 
