Yes, tons of changes
Updated all CSS files into  a-bit-more-responsive than the previous px-styled elements :disappointed: Will update all of them after commit.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Jockey Conference Center</title>
     <link rel="icon" href="assets/background-removed/logoblack.png" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="aboutresp.css" />
 </head>
 <body>
     <div class="header">
