--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jockey Conference Center</title>
     <link rel="icon" href="assets/background-removed/logoblack.png" />
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="homeresp.css" />
   </head>
   <body>
     <div class="header">
@@ -68,10 +68,10 @@
         <p class="desc-title">MAKE MEMORABLE EVENTS</p>
         <p class="desc-subtitle">Anything, Anytime.</p>
         <p class="desc-text">From meetings to concerts, be it exhibitions or conventions, we have our doors open for YOU!<br><br><br>Jockey Conference Center (JCC) facilitates your every need with our excellent guidance and assistance in terms of technical and operational support to make your dream events come true.</p>
-        <a href="pricing.html"><div class="plan-button">
+        <a class="plan-button" href="pricing.html">
           <p>Plan Your Event</p>
           <img src="assets/background-removed/arrowpink.png">
-        </div></a>
+        </a>
       </div>
     </div>
 
