--- a/events2.html
+++ b/events2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events | Jockey Conference Center</title>
     <link rel="icon" href="assets/background-removed/logoblack.png" />
-    <link rel="stylesheet" href="events2.css" />
+    <link rel="stylesheet" href="events2resp.css" />
 </head>
 <body>
     <div class="header">
