--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing | Jockey Conference Center</title>
     <link rel="icon" href="assets/background-removed/logoblack.png" />
-    <link rel="stylesheet" href="pricing.css" />
+    <link rel="stylesheet" href="pricingresp.css" />
 </head>
 <body>
     <div class="header">
