Renamed all the corresponding files.
Updated them to previous naming.

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Jockey Conference Center</title>
     <link rel="icon" href="assets/background-removed/logoblack.png" />
-    <link rel="stylesheet" href="contactresp.css" />
+    <link rel="stylesheet" href="contact.css" />
 </head>
 <body>
     <div class="header">
