--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,17 @@
               /></a>
             </li>
           </div>
-          <div class="textn">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="events1.html">Events</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="about.html">About</a></li>
-            <li class="highlight-nav">Contact</li>
+          <a href="#" class="hamburger" id="hamburger" onclick="showText()" ondblclick="hideText()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="textn" id="changeDisplay">
+            <a href="home.html" class="text">Home</a>
+            <a href="events1.html" class="text">Events</a>
+            <a href="pricing.html" class="text">Pricing</a>
+            <a href="about.html" class="text">About</a>
+            <a href="#" class="text"><span>Contact</span></a>
           </div>
         </div>
     </div>
