--- a/home.html
+++ b/home.html
@@ -18,12 +18,17 @@
               /></a>
             </li>
           </div>
-          <div class="textn">
-            <li class="highlight-nav">Home</li>
-            <li><a href="events1.html">Events</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <a href="#" class="hamburger" id="hamburger" onclick="showText()" ondblclick="hideText()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="textn" id="changeDisplay">
+            <a href="#" class="text"><span>Home</span></a>
+            <a href="events1.html" class="text">Events</a>
+            <a href="pricing.html" class="text">Pricing</a>
+            <a href="about.html" class="text">About</a>
+            <a href="contact.html" class="text">Contact</a>
           </div>
         </div>
     </div>
@@ -108,27 +113,27 @@
             <p class="schedule-desc">Astroboy Tour</p>
             <div class="limited-seat-container">
               <p class="limited-seat">Limited <span>Seats</span></p>
-              <div class="book-now">
+              <a href="https://www.animenewsnetwork.com/encyclopedia/manga.php?id=8029" target="_blank"><div class="book-now">
                 <p>Book Now</p>
-              </div>
+              </div></a>
             </div>
           </div>
           <div class="jrt-worship">
             <p class="schedule-desc">JRT Worship</p>
             <div class="limited-seat-container">
               <p class="limited-seat">Limited <span>Seats</span></p>
-              <div class="book-now">
+              <a href="https://www.jpccworship.com/" target="_blank"><div class="book-now">
                 <p>Book Now</p>
-              </div>
+              </div></a>
             </div>
           </div>
           <div class="kc-goldenage">
             <p class="schedule-desc">KC Golden Age</p>
             <div class="limited-seat-container">
               <p class="limited-seat">Limited <span>Seats</span></p>
-              <div class="book-now">
+              <a href="https://kfcku.com/" target="_blank"><div class="book-now">
                 <p>Book Now</p>
-              </div>
+              </div></a>
             </div>
           </div>
         </div>
